ajustando imagem do profile

--- a/index.html
+++ b/index.html
@@ -54,18 +54,7 @@
                     </p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <div class="social-icons justify-content-center mb-4">
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    </div>
-                    <img src="https://via.placeholder.com/200x200/5DADE2/FFFFFF?text=Clara" alt="Clara Joaquina" class="profile-img mb-4">
+                    <img src="images/profile.png" alt="Clara Joaquina" class="profile-img mb-4">
                     <div class="cta-section">
                         <h3 class="cta-title">Transformando ideias em<br>experiências visuais</h3>
                         <a href="#projetos" class="btn btn-custom">Conheça meus projetos!</a>
