--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Hero Section -->
     <section id="inicio" class="hero-section position-relative">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-center m-5">
                 <div class="col-lg-8">
                     <h1 class="hero-title">Seja bem-vindo ao<br>meu portfólio!</h1>
                     <h2 class="hero-subtitle">Eu sou a Clara Joaquina</h2>
@@ -53,9 +53,9 @@
                         um reorganizador de ideias e estilos.
                     </p>
                 </div>
-                <div class="col-lg-4 text-center">
-                    <img src="images/profile.png" alt="Clara Joaquina" class="profile-img mb-4">
-                    <div class="cta-section">
+                <div class="col-lg-4 text-end">
+                    <img src="images/profile.png" alt="Clara Joaquina" class="profile-img mb-4" />
+                    <div class="cta-section text-end">
                         <h3 class="cta-title">Transformando ideias em<br>experiências visuais</h3>
                         <a href="#projetos" class="btn btn-custom">Conheça meus projetos!</a>
                     </div>
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="decorative-icon">
-            <i class="fas fa-times"></i>
+            <img src="images/xicon.png" class="decorative-icon-image" />
         </div>
     </section>
 
