alteração de largura dos textos e alinhamento de sessões

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                 <div class="col-lg-8">
                     <h1 class="hero-title">Seja bem-vindo ao<br>meu portfólio!</h1>
                     <h2 class="hero-subtitle">Eu sou a Clara Joaquina</h2>
-                    <p class="hero-description">
+                    <p class="hero-description-top">
                         Atuo com UI Design desde 2021,<br>
                         utilizando o Figma em conjunto com<br>
                         Illustrator, Adobe Photoshop, dentre<br>
                         outros.
                     </p>
-                    <p class="hero-description">
+                    <p class="hero-description-bottom">
                         Implementar design em um projeto<br>
                         não é apenas deixar uma tela ou<br>
                         imagem bonita. Acredito que se deve<br>
