--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Hero Section -->
     <section id="inicio" class="hero-section position-relative">
         <div class="container">
-            <div class="row align-items-center m-5">
+            <div class="row align-items-center m-5 mt-0">
                 <div class="col-lg-8">
                     <h1 class="hero-title">Seja bem-vindo ao<br>meu portfólio!</h1>
                     <h2 class="hero-subtitle">Eu sou a Clara Joaquina</h2>
