--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
         <div class="container">
             <h3 class="footer-title">Entre em contato</h3>
             <div class="contact-icons">
-                <a href="#" class="contact-icon" title="LinkedIn">
+                <a href="https://www.linkedin.com/in/clara-joaquina-526504242/" target="_blank" class="contact-icon" title="LinkedIn">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="#" class="contact-icon" title="Email">
+                <a href="mailto:clarajoaquina33@gmail.com" class="contact-icon" title="Email">
                     <i class="fas fa-envelope"></i>
                 </a>
-                <a href="#" class="contact-icon" title="Telefone">
-                    <i class="fas fa-phone"></i>
+                <a href="https://w.app/90ieot" target="_blank" class="contact-icon" title="Whatsapp">
+                    <i class="fa-brands fa-whatsapp"></i>
                 </a>
             </div>
             <p class="footer-credit">Desenvolvido por Clara Joaquina</p>
