criação da página "projetos"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="#sobre">Sobre mim</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projetos">Meus projetos</a>
+                        <a class="nav-link" href="projetos.html">Meus projetos</a>
                     </li>
                 </ul>
             </div>
@@ -58,7 +58,7 @@
                     <img src="images/profile.png" alt="Clara Joaquina" class="profile-img mb-4" />
                     <div class="cta-section text-end">
                         <h3 class="cta-title">Transformando ideias em<br>experiências visuais</h3>
-                        <a href="#projetos" class="btn btn-custom">Conheça meus projetos!</a>
+                        <a href="projetos.html" class="btn btn-custom">Conheça meus projetos!</a>
                     </div>
                 </div>
             </div>
