--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a class="nav-link active" href="#inicio">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#sobre">Sobre mim</a>
+                        <a class="nav-link" href="sobre.html">Sobre mim</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="projetos.html">Meus projetos</a>
