--- a/sobre.html
+++ b/sobre.html
@@ -6,203 +6,8 @@
     <title>Sobre mim - Clara Joaquina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/sobre.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <style>
-        .about-section {
-            background-color: var(--dark-bg);
-            min-height: 100vh;
-            padding: 2rem 0;
-        }
-
-        .decorative-icons {
-            display: flex;
-            gap: 1rem;
-            margin-bottom: 2rem;
-        }
-
-        .decorative-x {
-            height: 20px;
-            opacity: 0.6;
-        }
-
-        .about-title {
-            color: var(--primary-color);
-            font-size: 3rem;
-            font-weight: bold;
-            margin-bottom: 3rem;
-        }
-
-        .section-title {
-            color: var(--text-light);
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 1.5rem;
-        }
-
-        .about-text {
-            color: var(--text-light);
-            font-size: 1rem;
-            line-height: 1.6;
-            margin-bottom: 1.5rem;
-        }
-
-        .highlight-text {
-            color: var(--primary-color);
-            font-size: 1rem;
-            line-height: 1.6;
-            margin-bottom: 2rem;
-        }
-
-        .job-title {
-            color: var(--primary-color);
-            font-size: 1.1rem;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-        }
-
-        .job-description {
-            color: var(--text-light);
-            font-size: 1rem;
-            line-height: 1.6;
-            margin-bottom: 1rem;
-        }
-
-        .job-contribution {
-            color: var(--text-light);
-            font-size: 1rem;
-            line-height: 1.6;
-            margin-bottom: 2rem;
-        }
-
-        .skills-card {
-            background-color: var(--darker-bg);
-            border-radius: 12px;
-            padding: 2rem;
-            margin-bottom: 2rem;
-        }
-
-        .skills-title {
-            color: var(--primary-color);
-            font-size: 1.3rem;
-            font-weight: bold;
-            margin-bottom: 1.5rem;
-        }
-
-        .skill-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 1rem;
-        }
-
-        .skill-name {
-            color: var(--text-light);
-            font-size: 1rem;
-        }
-
-        .skill-bar {
-            width: 60%;
-            height: 4px;
-            background-color: #333;
-            border-radius: 2px;
-            position: relative;
-        }
-
-        .skill-progress {
-            height: 100%;
-            background-color: var(--primary-color);
-            border-radius: 2px;
-            position: relative;
-        }
-
-        .skill-progress::after {
-            content: '';
-            position: absolute;
-            right: 0;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 8px;
-            height: 8px;
-            background-color: var(--primary-color);
-            border-radius: 50%;
-        }
-
-        .tools-icons {
-            display: flex;
-            gap: 1rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .tool-icon {
-            width: 40px;
-            height: 40px;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.2rem;
-        }
-
-        .figma-icon {
-            background-color: #F24E1E;
-            color: white;
-        }
-
-        .ps-icon {
-            background-color: #31A8FF;
-            color: white;
-        }
-
-        .ai-icon {
-            background-color: #FF9A00;
-            color: white;
-        }
-
-        .course-item {
-            margin-bottom: 1.5rem;
-        }
-
-        .course-status {
-            color: var(--primary-color);
-            font-size: 0.9rem;
-            font-weight: 600;
-            margin-bottom: 0.3rem;
-        }
-
-        .course-title {
-            color: var(--text-light);
-            font-size: 1rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .course-year {
-            color: var(--primary-color);
-            font-size: 1rem;
-            font-weight: 600;
-            margin-bottom: 0.3rem;
-        }
-
-        .course-description {
-            color: var(--text-light);
-            font-size: 0.95rem;
-            line-height: 1.4;
-        }
-
-        @media (max-width: 768px) {
-            .about-title {
-                font-size: 2.5rem;
-            }
-            
-            .skills-card {
-                padding: 1.5rem;
-            }
-            
-            .skill-bar {
-                width: 50%;
-            }
-        }
-    </style>
 </head>
 <body>
     <!-- Navigation -->
