--- a/projetos.html
+++ b/projetos.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="index.html">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#sobre">Sobre mim</a>
+                        <a class="nav-link" href="sobre.html">Sobre mim</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="projetos.html">Meus projetos</a>
