alteração de imagens

--- a/sobre.html
+++ b/sobre.html
@@ -114,18 +114,10 @@
                     <!-- Tools Card -->
                     <div class="skills-card">
                         <h3 class="skills-title">Ferramentas</h3>
-                        <div class="tools-icons">
-                            <div class="tool-icon figma-icon">
-                                <i class="fab fa-figma"></i>
-                            </div>
-                            <div class="tool-icon ps-icon">
-                                <i class="fas fa-layer-group"></i>
-                            </div>
-                            <div class="tool-icon ai-icon">
-                                <i class="fas fa-vector-square"></i>
-                            </div>
-                        </div>
-                        <div class="skill-item">
+                        <img src="images/icon-fig.png" class="skills-card-imgs">
+                        <img src="images/icon-ps.png" class="skills-card-imgs">
+                        <img src="images/icon-ai.png" class="skills-card-imgs">
+                        <div class="skill-item mt-3">
                             <span class="skill-name">Figma</span>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 95%;"></div>
