alteração da página "projetos"

--- a/projetos.html
+++ b/projetos.html
@@ -35,9 +35,9 @@
     <!-- Projects Section -->
     <section class="projects-section">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row p-4">
                 <!-- Left Sidebar -->
-                <div class="col-lg-4 projects-sidebar">
+                <div class="col-lg-2 projects-sidebar">
                     <div class="sidebar-content">
                         <div class="decorative-icons mb-4">
                             <img src="images/xicon.png" class="decorative-x" alt="">
@@ -53,7 +53,7 @@
                 </div>
 
                 <!-- Projects Grid -->
-                <div class="col-lg-8 projects-grid">
+                <div class="col-lg-9 projects-grid">
                     <div class="container">
                         <div class="row g-4">
                             <!-- Project Card 1 -->
